# catapult

./: .gitignore  Makefile  README.md  catapult-client.opam  catapult-conv.sh  catapult-daemon.opam  catapult-file.opam  catapult-sqlite.opam  catapult.opam  daemon.sh  dune  dune-project  example_file.sh  heavy.sh  index.md
.github/workflows/: gh-pages.yml  main.yml
dev/: index.html
dev/catapult/: index.html
dev/catapult-client/: index.html
dev/catapult-client/Catapult_client/: index.html
dev/catapult-client/Catapult_client/Backend/: index.html
dev/catapult-client/Catapult_client/Connection/: index.html
dev/catapult-client/Catapult_client__/: index.html
dev/catapult-client/Catapult_client__Backend/: index.html
dev/catapult-client/Catapult_client__Connections/: index.html
dev/catapult-daemon/: index.html
dev/catapult-file/: index.html
dev/catapult-file/Catapult_file/: index.html
dev/catapult-sqlite/: index.html
dev/catapult-sqlite/Catapult_sqlite/: index.html
dev/catapult-sqlite/Catapult_sqlite/Backend/: index.html
dev/catapult-sqlite/Catapult_sqlite/Backend/Make/: index.html
dev/catapult-sqlite/Catapult_sqlite/Backend/module-type-ARG/: index.html
dev/catapult-sqlite/Catapult_sqlite/Ev_to_json/: index.html
dev/catapult-sqlite/Catapult_sqlite/Writer/: index.html
dev/catapult-sqlite/Catapult_sqlite__/: index.html
dev/catapult-sqlite/Catapult_sqlite__Backend/: index.html
dev/catapult-sqlite/Catapult_sqlite__Ev_to_json/: index.html
dev/catapult-sqlite/Catapult_sqlite__Json_buf_/: index.html
dev/catapult-sqlite/Catapult_sqlite__Writer/: index.html
dev/catapult/Catapult/: index.html
dev/catapult/Catapult/Adapt_backend/: index.html
dev/catapult/Catapult/Adapt_backend/module-type-BACKEND/: index.html
dev/catapult/Catapult/Arg/: index.html
dev/catapult/Catapult/Endpoint_address/: index.html
dev/catapult/Catapult/Event_type/: index.html
dev/catapult/Catapult/Nil_impl/: index.html
dev/catapult/Catapult/Ser/: index.html
dev/catapult/Catapult/Ser/Arg/: index.html
dev/catapult/Catapult/Ser/Arg_value/: index.html
dev/catapult/Catapult/Ser/Bare/: index.html
dev/catapult/Catapult/Ser/Client_close_trace/: index.html
dev/catapult/Catapult/Ser/Client_emit/: index.html
dev/catapult/Catapult/Ser/Client_message/: index.html
dev/catapult/Catapult/Ser/Client_open_trace/: index.html
dev/catapult/Catapult/Ser/Event/: index.html
dev/catapult/Catapult/Ser/Extra/: index.html
dev/catapult/Catapult/Tracing/: index.html
dev/catapult/Catapult/Tracing/Control/: index.html
dev/catapult/Catapult/Tracing/Syntax/: index.html
dev/catapult/Catapult/module-type-BACKEND/: index.html
dev/catapult/Catapult/module-type-IMPL/: index.html
dev/catapult/Catapult__/: index.html
dev/catapult/Catapult__Arg/: index.html
dev/catapult/Catapult__Atomic_shim_/: index.html
dev/catapult/Catapult__Backend/: index.html
dev/catapult/Catapult__Bare_encoding/: index.html
dev/catapult/Catapult__Clock/: index.html
dev/catapult/Catapult__Endpoint_address/: index.html
dev/catapult/Catapult__Event_type/: index.html
dev/catapult/Catapult__Impl/: index.html
dev/catapult/Catapult__Nil_impl/: index.html
dev/catapult/Catapult__Ser/: index.html
dev/catapult/Catapult__Tracing/: index.html
dev/catapult/Catapult_utils/: index.html
dev/catapult/Catapult_utils/Bare_encoding/: index.html
dev/catapult/Catapult_utils/Bare_encoding/Decode/: index.html
dev/catapult/Catapult_utils/Bare_encoding/Encode/: index.html
dev/catapult/Catapult_utils/Bare_encoding/Pp/: index.html
dev/catapult/Catapult_utils/Bare_encoding/String_map/: index.html
dev/catapult/Catapult_utils/Bare_encoding/module-type-INPUT/: index.html
dev/catapult/Catapult_utils/Bare_encoding/module-type-OUTPUT/: index.html
dev/catapult/Catapult_utils/Endpoint_address/: index.html
dev/catapult/Catapult_utils/Ev_to_json/: index.html
dev/catapult/Catapult_utils/Gc_stats/: index.html
dev/catapult/Catapult_utils/Json_out/: index.html
dev/catapult/Catapult_utils/Ser/: index.html
dev/catapult/Catapult_utils/Ser/Arg/: index.html
dev/catapult/Catapult_utils/Ser/Arg_value/: index.html
dev/catapult/Catapult_utils/Ser/Client_close_trace/: index.html
dev/catapult/Catapult_utils/Ser/Client_emit/: index.html
dev/catapult/Catapult_utils/Ser/Client_message/: index.html
dev/catapult/Catapult_utils/Ser/Client_open_trace/: index.html
dev/catapult/Catapult_utils/Ser/Event/: index.html
dev/catapult/Catapult_utils/Thread_local/: index.html
dev/catapult/Catapult_utils__/: index.html
dev/catapult/Catapult_utils__Gc_stats/: index.html
dev/catapult/Catapult_utils__Json_out/: index.html
dev/catapult/Catapult_utils__Thread_local/: index.html
examples/file/: basic.ml  dune
examples/heavy/: dune  heavy.ml
src/: arg.mli  backend.mli  catapult.ml  dune  event_type.ml  impl.mli  nil_impl.mli  tracing.ml  tracing.mli
src/client/: backend.ml  backend.mli  catapult_client.ml  catapult_client.mli  connection.ml  connection.mli  connections.ml  connections.mli  dune  utils.ml
src/core/: .ocamlformat-ignore  adapt_backend.ml  adapt_backend.mli  arg.mli  backend.mli  catapult.ml  clock.ml  clock.mli  clock.mtime.ml  clock.ptime.ml  clock.unix.ml  dune  endpoint_address.ml  event_type.ml  impl.mli  nil_impl.mli  ser.bare  ser.ml  thread_local.ml  thread_local.mli  tracing.ml  tracing.mli
src/daemon/: catapult_daemon.ml  dune  ser.proto
src/data/: catapult-daemon.service
src/file/: catapult_file.ml  catapult_file.mli  dune
src/logger/: catapult_file.ml  catapult_file.mli  dune
src/sqlite/: backend.ml  backend.mli  catapult_sqlite.ml  catapult_sqlite.mli  dune  ev_to_json.ml  ev_to_json.mli  json_buf_.ml  writer.ml  writer.mli
src/utils/: .ocamlformat-ignore  catapult_utils.ml  dune  endpoint_address.mli  ev_to_json.ml  ev_to_json.mli  gc_stats.ml  gc_stats.mli  json_out.ml  ser.ml  thread_local.ml  thread_local.mli
src/wire/: catapult_wire.ml  dune  endpoint_address.ml  endpoint_address.mli  ser.ml
tests/: dune  t_thread_local.ml
(+8 files in other folders)
