(library
 (synopsis "Profiling system based on the Catapult format")
 (modules_without_implementation backend impl)
 (libraries
  threads
  (re_export trace.core)
  (select thread_local.ml from
    (thread-local-storage -> thread_local.real.ml)
    (-> thread_local.stub.ml))
  (select
   clock.ml
   from
   (mtime mtime.clock.os -> clock.mtime.ml)
   (-> clock.unix.ml)))
 (public_name catapult)
 (name catapult))

(rule
 (targets atomic_shim_.ml)
 (action
  (with-stdout-to
   %{targets}
   (run gen/gen.exe))))
