(library
 (synopsis "Profiling system based on the Catapult format")
 (modules_without_implementation backend impl)
 (libraries
  threads
  thread-local-storage
  (re_export trace.core)
  (select
   clock.ml
   from
   (mtime mtime.clock.os -> clock.mtime.ml)
   (-> clock.unix.ml)))
 (public_name catapult)
 (name catapult))

(rule
 (targets atomic_shim_.ml)
 (action
  (with-stdout-to
   %{targets}
   (run gen/gen.exe))))
