(library
 (name catapult_utils)
 (public_name catapult.utils)
 (synopsis "Utilities for Catapult")
 (libraries catapult))

; generate (de)ser code

(rule
 (alias lint)
 (targets ser.ml)
 (deps ser.bare)
 (mode promote)
 (action
  (run bare-codegen -o %{targets} %{deps})))

; vendor runtime library for BARE

(rule
 (alias lint)
 (targets bare_encoding.ml bare_encoding.mli)
 (mode promote)
 (action
  (progn
   (copy %{lib:bare_encoding:bare_encoding.ml} bare_encoding.ml)
   (copy %{lib:bare_encoding:bare_encoding.mli} bare_encoding.mli))))
