
(library
  (name catapult_wire)
  (public_name catapult.wire)
  (libraries catapult)
  (synopsis "Wire format for Catapult's network logger"))

; generate (de)ser code
(rule
  (targets ser.ml)
  (deps ser.bare)
  (mode promote)
  (action (run bare-codegen --pp -o %{targets} %{deps})))

; vendor runtime library for BARE
(rule
  (targets Bare_encoding.ml Bare_encoding.mli)
  (mode promote)
  (action
    (progn
      (copy %{lib:bare_encoding:Bare_encoding.ml} Bare_encoding.ml)
      (copy %{lib:bare_encoding:Bare_encoding.mli} Bare_encoding.mli))))
